# bellmetal

./: .gitignore  README.md
.github/workflows/: rust.yml
bellmetal/: Cargo.toml
bellmetal-method-library-builder/: Cargo.toml
bellmetal-method-library-builder/src/: main.rs
bellmetal/benches/: place_notation_parsing.rs
bellmetal/src/: change.rs  consts.rs  coursing_order.rs  lib.rs  method.rs  method_library.rs  mod.rs  music_scoring.rs  permutation.rs  place_notation.rs  proving.rs  touch.rs  touch_generation.rs  touch_iterator.rs  transposition.rs  types.rs  utils.rs
